***feat: implementar sistema de verificación de email y mejorar suite de pruebas***
- Integración de sistema de notificaciones vía EmailService utilizando JavaMailSender y Thymeleaf.
- Implementación de lógica de activación de cuenta mediante tokens únicos (UUID).
- Actualización de pruebas unitarias para cumplir con restricciones de campos obligatorios agregados.